# WireChat

./: .env.example  .gitignore  Cargo.toml  LICENSE_MIT  README.md
front/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/src/: App.vue  main.ts
front/src/assets/: base.css  main.css
front/src/components/: Chat.vue  ChatInput.vue  ChatList.vue  ChatWindow.vue  MessageBubble.vue  NewConversation.vue
front/src/router/: index.ts
front/src/views/: ChatView.vue  ContactsView.vue  ProfileView.vue  SettingsView.vue  ShareView.vue
migrations/2025-05-05-082858_create_peers/: up.sql
migrations/20250505082858_create_tables/: down.sql  up.sql
src/: api.rs  lib.rs  main.rs  messaging.rs  wireguard.rs  wireguard_mod.rs
src/api/: configure_wireguard.rs  hub.rs  mod.rs  ws_session.rs
src/client/: configuration.rs  hub.rs  messenger.rs  mod.rs  ws_session.rs
src/database/: db_setup.rs  message.rs  mod.rs  peer.rs  schema.rs
src/server/: mod.rs  server.rs
src/wireguard/: wireguard.rs
