[package]
name = "wirechat"
version = "0.1.0"
authors = ["Louis Travaux", "Léo Portet", "Yan Arresseguet", "Pacôme Texier"]
description = "A Peer to Peer messaging client using WireGuard."
license = "LGPL-2"
repository = "https://github.com/loouis-t/WireChat"
edition = "2024"

[dependencies]
# Async runtime and utilities.
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP/WebSocket API server framework.
actix-web = "4"

# Serialization for JSON handling (used in API endpoints).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio-wireguard = "0.1.3"
base64 = "0.22.1"
dotenv = "0.15.0"

# Logging
log = "0.4"
env_logger = "0.11.8"
rand = "0.9.0"
rand_core = "0.6.4"
reqwest = "0.12.15"
diesel = { version = "2.2.9", features = ["sqlite"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
