[package]
name = "wirechat"
version = "0.1.0"
authors = ["Louis Travaux", "Léo Portet", "Yan Arresseguet", "Pacôme Texier"]
description = "A Peer to Peer messaging client using WireGuard."
license = "LGPL-2"
repository = "https://github.com/loouis-t/WireChat"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

actix = "0.13"
actix-web = "4"
actix-web-actors = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22.1"
dotenv = "0.15.0"

diesel = { version = "2.2.10", features = ["sqlite", "chrono", "r2d2"] }
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
onetun = "0.3.10"
futures = "0.3.31"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
